# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: init.py
gendiff/scripts/: cli.py  gendiff.py  init.py
tests/: test_gendiff.py
