[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0.2"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
"pytest>=8.3.4",
"pytest-cov>=6.0.0",
"ruff>=0.9.2",
]
